tests/compile_fail/store_type_generics_have_bounds.stderr
error[E0277]: the trait bound `K: std::cmp::Eq` is not satisfied
  --> tests/compile_fail/store_type_generics_have_bounds.rs:17:1
   |
17 | #[memoized(key_expr = input, store_type = Store)]
   | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ the trait `std::cmp::Eq` is not implemented for `K`
   |
note: required by a bound in `Store`
  --> tests/compile_fail/store_type_generics_have_bounds.rs:7:17
   |
7  | struct Store<K: Eq, V: Ord> {
   |                 ^^ required by this bound in `Store`
   = note: this error originates in the attribute macro `memoized` (in Nightly builds, run with -Z macro-backtrace for more info)
help: consider further restricting this bound
   |
17 | #[memoized(key_expr = input, store_type = Store)] + std::cmp::Eq
   |                                                   ++++++++++++++

error[E0277]: the trait bound `R: Ord` is not satisfied
  --> tests/compile_fail/store_type_generics_have_bounds.rs:17:1
   |
17 | #[memoized(key_expr = input, store_type = Store)]
   | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ the trait `Ord` is not implemented for `R`
   |
note: required by a bound in `Store`
  --> tests/compile_fail/store_type_generics_have_bounds.rs:7:24
   |
7  | struct Store<K: Eq, V: Ord> {
   |                        ^^^ required by this bound in `Store`
   = note: this error originates in the attribute macro `memoized` (in Nightly builds, run with -Z macro-backtrace for more info)
help: consider further restricting this bound
   |
17 | #[memoized(key_expr = input, store_type = Store)] + std::cmp::Ord
   |                                                   +++++++++++++++
